<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_title_label"/>
    <EditText
        android:id="@+id/event_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title_edit"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_email_label"/>
    <EditText
        android:id="@+id/event_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_email_edit"/>
    <Button
        android:id="@+id/event_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9ADDFF"
        android:textColor="@color/black"
        android:text="@string/event_date_text"/>
    <Button
        android:id="@+id/event_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9ADDFF"
        android:textColor="@color/black"
        android:text="@string/event_submit"/>

</LinearLayout>