<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/card_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/card_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_title_label" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:id="@+id/card_title_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_title" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/card_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_description" />

    <EditText
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/card_message_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        android:hint="@string/card_details_label"/>

    <Button
        android:id="@+id/card_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9ADDFF"
        android:text="@string/card_message_text"
        android:textColor="@color/black" />
</LinearLayout>